--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   graphql_flutter: ^3.0.0
   http: ^0.12.0+4
+  progress_dialog: ^1.2.1
 
 dev_dependencies:
   flutter_test:
