--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   graphql_flutter: ^3.0.0
   http: ^0.12.0+4
   progress_dialog: ^1.2.1
+  firebase_core: ^0.4.4+3
+  firebase_database: ^3.1.3
 
 dev_dependencies:
   flutter_test:
